--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,14 +1,11 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: border-box;    
 }
-
-body{
-    color: #fff;
-    background: #ebf2f5;
+body{    
+    background:rgb(217, 241, 248)
 }
-
 body, button, input, textarea {
     font: 600 18px Nunito, sans-serif;
 }
