--- a/src/styles/pages/Landing.css
+++ b/src/styles/pages/Landing.css
@@ -27,7 +27,7 @@
   #page-landing .wrapper span {
     position: relative;
     align-self: center;  
-    left: 140vh;
+    color: #fff;
   }
   #page-landing .wrapper .image {
       top: 1px;
@@ -38,10 +38,11 @@
       max-height: 150%;
   }
 
-  #page-landing .wrapper .image .span {
+  #page-landing .wrapper .image h3 {
     position: absolute;
     align-self: center;  
-    left: 80vh;
+    left: 120vh;
+    color: #fff;
   }
   #page-landing .wrapper .button {
     position: absolute;
